# iris-ai

./: .env.example  .gitignore  QUICK_START.md  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  run_with_doppler.sh  whitelist.json.backup_20250530_150202
alembic/: README.md  env.py
alembic/versions/: 49b0dd082fa1_initial_migration_with_whitelist_table.py  7c91f10cb583_add_first_name_and_last_name_to_.py  f1d2d3c4e5a6_add_gpt5_vertex_settings.py
docker/: .dockerignore  Dockerfile  docker-compose.yml  docker-start.sh
docs/: DEPLOYMENT.md  DEPLOYMENT_QUICKSTART.md  FILE_STORAGE_MIGRATION_SUMMARY.md  README_REFACTORED.md  SETUP_GUIDE.md  adding_new_llm_example.py  allow_command_with_id_prefix.py  allow_command_with_id_support.py  anthropic_integration_summary.md  file_storage_system.md  gemini_image_generation.md  gemini_search_feature.md  openai_integration_summary.md  whitelist_database_migration.md
scripts/: add_web_search_column.py  migrate_images_to_filesystem.py  migrate_whitelist_to_db.py  setup.py  telethon-ai-bot.service  test_allow_by_id.py  test_allow_with_id_prefix.py  test_file_storage.py  test_get_user_by_id.py  test_missing_file_handling.py
scripts/deployment/: README.md  deploy.sh  deploy.yml  inventory.template  setup-systemd.sh  telethon-ai-bot.service
src/: __init__.py  main.py
src/bot/: __init__.py  callbacks.py  commands.py  decorators.py  handlers.py
src/config/: __init__.py  doppler.py  settings.py  storage.py  whitelist.py  whitelist_db.py
src/database/: __init__.py  manager.py  models.py
src/llm/: __init__.py  (+5 more)
(+4 files in other folders)
