[project]
name = "telethon-ai-bot"
version = "0.1.0"
description = "Telegram bot with Gemini/Claude/OpenAI via Telethon"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}

dependencies = [
  "telethon>=1.40.0",
  "google-genai>=1.16.1",
  "google-auth>=2.31.0",
  "httpx>=0.28.1,<1.0.0",  # required by google-genai
  "openai>=1.55.3",         # compatible with httpx 0.28+
  "sqlalchemy>=2.0",
  "aiosqlite>=0.19",
  "alembic>=1.13",
  "python-dotenv>=1.0",
  "doppler-sdk>=1.3",
  "pillow>=10.4",
  "aiofiles>=23.2",
]

[tool.uv]
package = true

[tool.uv.sources]

[tool.uv.workspace]
members = ["."]

[tool.alembic]
script_location = "alembic"

